# verilator_test

./: README.md
examples/: README.md
examples/cmake_hello_c/: CMakeLists.txt  Makefile
examples/cmake_hello_sc/: CMakeLists.txt  Makefile
examples/cmake_tracing_c/: CMakeLists.txt  Makefile
examples/cmake_tracing_sc/: CMakeLists.txt  Makefile
examples/make_hello_sc/: Makefile
examples/make_tracing_c/: Makefile_obj
examples/make_tracing_sc/: sc_main.cpp  sub.v
